feature(*): create documentatio routes
